[tool.black]
line-length = 88

[tool.mypy]
exclude = "tests"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = [".tests*"]
namespaces = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "insert-name-here"
version = "0.1.0"
authors = [
    { name="Maximos Nikiforakis", email="nikiforos@live.co.uk" },
]
description = "description"
keywords = ["keywords"]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
dev = ["unittest-extensions", "black"]

[project.urls]
Homepage = ""
Documentation = ""
Issues = ""